refactor(endpoints): simplify parameter names in artifact and beyonder data endpoints